[package]
name = "nanoid-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
license = "MIT"
repository = "https://github.com/acheul/nanoid-wasm"
description = "NanoId for wasm"
readme = "../README.md"
keywords = ["nanoid", "wasm"]
categories = [
  "data-structures", "wasm"
]

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
not-wasm = ["dep:rand"]

[dependencies]
wasm-bindgen = { version="0.2.100", optional=true }
js-sys = { version="0.3.77", optional=true }
rand = { version="0.9.0", optional=true }