[package]
name = "nanoid-wasm"
version = "0.2.2"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
license = "MIT"
repository = "https://github.com/acheul/nanoid-wasm"
description = "NanoId for wasm"
readme = "../README.md"
keywords = ["nanoid", "wasm"]
categories = ["data-structures", "wasm"]
exclude = [
    "tests/*",
    "examples/*",
]

[dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version="0.2" }
web-sys = { version="0.3", features = ["Window", "Crypto"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = { version="0.9" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "example"